--- a/index.html
+++ b/index.html
@@ -16,8 +16,24 @@
     <h1 id="encabezado1">DOM - Ejercicios</h1>
     <h2 id="encabezado2">DOM - Ejercicios</h2>
     <em onclick="modifica()">Cursiva</em>
-    <button type="submit" id="btnMostrar" class="btn btn-primary">Mostrar</button>
+    <form>
+      <div class="mb-3">
+        <label for="txtRFC" class="form-label">RFC:</label>
+        <input type="text" class="form-control" id="txtRFC" placeholder="Escribe tu RFC">
+      </div>
+      <div class="mb-3">
+        <label for="txtCURP" class="form-label">CURP:</label>
+        <input type="text" class="form-control" id="txtCURP" placeholder="Escribe tu CURP">
+      </div>
 
+      <div class="mb-3">
+        <label for="txtTelefono" class="form-label">Telefono: </label>
+        <input type="text" class="form-control" id="txtTelefono" placeholder="5584736485">
+      </div>
+      <button type="submit" id="btnMostrar" class="btn btn-primary">Mostrar</button>
+
+    </form>
+      
       <ul class="list-group">
         <li class="list-group-item">An item</li>
         <li class="list-group-item">An second item</li>
@@ -33,6 +49,7 @@
         <li class="list-group-item">An fourth item</li>
         <li class="list-group-item">An a fifth item</li>
       </ul>
+    
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"
